--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "luxon": "^1.23.0",
     "next": "9.3.4",
     "next-fonts": "^1.0.3",
+    "next-seo": "^4.4.0",
     "next-with-apollo": "^5.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-helmet": "^6.0.0",
     "react-markdown": "^4.3.1",
     "react-touch-events": "^2.1.0",
     "sass": "^1.26.3"
@@ -32,7 +32,6 @@
     "@types/next-seo": "^1.10.0",
     "@types/node": "^13.11.1",
     "@types/react": "^16.9.34",
-    "@types/react-helmet": "^5.0.15",
     "postcss-preset-env": "^6.7.0",
     "tailwindcss": "^1.2.0",
     "typescript": "^3.8.3"
